Exams/exam_19.02.12/3-0-ft_rrange/3-0-ft_rrange.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r8p37.42.us.org
Darwin 17.4.0 x86_64
$> date
Tue Feb 12 10:24:26 PST 2019
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-exam-alone-in-the-dark-beginner/exam_20190212/ititkov

= Git history ==================================================================
$> git -C /var/folders/z2/r3pg4x0j1ddctg34n54xwxdc0000gp/T/tmppY8iu2/user log --pretty='%H - %an, %ad : %s'
2f0436fe6880eb5702b7c405ea0029fc07a26d05 - Exam 42, Tue Feb 12 10:24:09 2019 -0800 : ft_rrange
b344d1afd631346b5f2156d7f28775189568050b - Exam 42, Tue Feb 12 09:54:59 2019 -0800 : swap_bits
caf510317ae1ac450f797f6936a3eb7a84628a67 - Exam 42, Tue Feb 12 09:39:55 2019 -0800 : ft_strlen
90692381b617babc0344898dc048609e8d849b3a - Exam 42, Tue Feb 12 09:22:50 2019 -0800 : aff_last_param
c845a1cf4c7b529d3e6497c39df64988474a6a6f - Exam 42, Tue Feb 12 09:16:00 2019 -0800 : aff_last_param
 
= Collected files ==========================================
$> ls -lAR /var/folders/z2/r3pg4x0j1ddctg34n54xwxdc0000gp/T/tmppY8iu2/user
total 8
-rw-r--r--  1 deepthought  deepthought  1162 Feb 12 10:24 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Feb 12 10:24 aff_last_param
drwxr-xr-x  3 deepthought  deepthought   102 Feb 12 10:24 ft_rrange
drwxr-xr-x  3 deepthought  deepthought   102 Feb 12 10:24 ft_strlen
drwxr-xr-x  3 deepthought  deepthought   102 Feb 12 10:24 maff_alpha
drwxr-xr-x  3 deepthought  deepthought   102 Feb 12 10:24 swap_bits

/var/folders/z2/r3pg4x0j1ddctg34n54xwxdc0000gp/T/tmppY8iu2/user/aff_last_param:
total 8
-rw-r--r--  1 deepthought  deepthought  1127 Feb 12 10:24 aff_last_param.c

/var/folders/z2/r3pg4x0j1ddctg34n54xwxdc0000gp/T/tmppY8iu2/user/ft_rrange:
total 8
-rw-r--r--  1 deepthought  deepthought  1227 Feb 12 10:24 ft_rrange.c

/var/folders/z2/r3pg4x0j1ddctg34n54xwxdc0000gp/T/tmppY8iu2/user/ft_strlen:
total 8
-rw-r--r--  1 deepthought  deepthought  978 Feb 12 10:24 ft_strlen.c

/var/folders/z2/r3pg4x0j1ddctg34n54xwxdc0000gp/T/tmppY8iu2/user/maff_alpha:
total 8
-rw-r--r--  1 deepthought  deepthought  994 Feb 12 10:24 maff_alpha.c

/var/folders/z2/r3pg4x0j1ddctg34n54xwxdc0000gp/T/tmppY8iu2/user/swap_bits:
total 8
-rw-r--r--  1 deepthought  deepthought  982 Feb 12 10:24 swap_bits.c
 
= ft_rrange ====================================================================
$> gcc -Wextra -Wall -Werror main.c ft_rrange.c -o user_exe 
ft_rrange.c:19:10: error: use of undeclared identifier 'NULL'
        array = NULL;
                ^
ft_rrange.c:21:17: error: implicitly declaring library function 'malloc' with type 'void *(unsigned long)' [-Werror,-Wimplicit-function-declaration]
        array = (int *)malloc(sizeof(int) * lent);
                       ^
ft_rrange.c:21:17: note: include the header <stdlib.h> or explicitly provide a declaration for 'malloc'
ft_rrange.c:23:11: error: use of undeclared identifier 'NULL'
                return (NULL);
                        ^
3 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
